# jogoanatomico

./: .gitignore  README.md
Anatomy Game Design System/: README.md  index.html  package.json  vite.config.ts
Anatomy Game Design System/src/: App.tsx  index.css  main.tsx
Anatomy Game Design System/src/components/: GameModeCard.tsx  ProgressRing.tsx  QuizQuestion.tsx  StatCard.tsx  SystemProgressCard.tsx
Anatomy Game Design System/src/context/: AuthContext.tsx
Anatomy Game Design System/src/hooks/: useAuth.ts
backend/: .env.example  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: dependencies.py  error_handlers.py
backend/app/api/common/: rate_limit.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: __init__.py  anatomy.py  auth.py  campaigns.py  classrooms.py  dashboard.py  health.py  leaderboard.py  missions.py  quizzes.py  users.py  webhooks.py
backend/app/core/: config.py  events.py  logging.py  security.py
backend/app/domain/models/: __init__.py  anatomy.py  base.py  campaign.py  leaderboard.py  mission.py  organization.py  progress.py  quiz.py  user.py  webhook.py
backend/app/domain/schemas/: anatomy.py  campaign.py  classroom.py  common.py  dashboard.py  leaderboard.py  mission.py  quiz.py  user.py  webhook.py
backend/app/domain/services/: __init__.py  anatomy.py  campaigns.py  classroom.py  leaderboard.py  missions.py  progress.py  quiz.py  users.py  webhooks.py
backend/app/infrastructure/cache/: redis.py
backend/app/infrastructure/db/: session.py
backend/app/infrastructure/jobs/: scheduler.py
backend/app/infrastructure/observability/: tracing.py
backend/app/infrastructure/storage/: local.py
backend/docs/: architecture-decisions.md  runbook.md  security-checklist.md  traceability.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: export_openapi.py  install_mysql_schema.py  install_schema.py  seed_data.py
backend/tests/: conftest.py
backend/tests/contract/: test_openapi.py
backend/tests/integration/: test_auth_flow.py  test_missions.py
backend/tests/loadtest/: locustfile.py
backend/tests/unit/: test_security.py
(+14 files in other folders)
