[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anatomy-game-backend"
version = "0.1.0"
description = "Backend service for the Anatomy Pro learning platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "MtsFerreira"}]
license = {text = "MIT"}
keywords = ["fastapi", "anatomy", "education", "game"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlmodel>=0.0.16",
  "sqlalchemy>=2.0.29",
  "alembic>=1.13.2",
  "asyncmy>=0.2.9",
  "pymysql>=1.1.0",
  "bcrypt>=4.1.2,<5.0",
  "pydantic-settings>=2.2.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "structlog>=24.1.0",
  "prometheus-fastapi-instrumentator>=6.1.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-exporter-otlp>=1.24.0",
  "redis>=5.0.1",
  "aiocache>=0.12.2",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.1.0.post1",
  "tenacity>=8.2.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.12.0",
  "aiosqlite>=0.19.0",
  "httpx>=0.27.0",
  "ruff>=0.4.7",
  "mypy>=1.10.0",
  "types-redis>=4.6.0.20240425",
  "types-python-jose>=3.3.4.20240106",
  "openapi-spec-validator>=0.7.1",
  "locust>=2.26.0",
  "bandit>=1.7.7",
  "safety>=3.2.4"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
exclude = ["migrations"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "migrations",
  "scripts",
  "alembic.ini",
  "pyproject.toml",
  "README.md",
]
